tdf#141571 Base crashed on creation of user function

Revert "reportdesign/core: create instances with uno constructors"
This reverts commit 79c1d1234bdac0d41109930529f42d39c70b0f7b.

I have no idea what is causing this. Something is stomping
on memory belonging to something else, but why?

Change-Id: Ieb758e5788f07e3f477063274ccd0721e3bf7726
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115567
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>