reportdesign/source/core/api/FixedLine.cxx
@@ -200,14 +200,33 @@ void SAL_CALL OFixedLine::dispose()
     cppu::WeakComponentImplHelperBase::dispose();
 }
 
-OUString SAL_CALL OFixedLine::getImplementationName(  )
+OUString OFixedLine::getImplementationName_Static(  )
 {
     return "com.sun.star.comp.report.OFixedLine";
 }
 
+
+OUString SAL_CALL OFixedLine::getImplementationName(  )
+{
+    return getImplementationName_Static();
+}
+
+uno::Sequence< OUString > OFixedLine::getSupportedServiceNames_Static(  )
+{
+    uno::Sequence< OUString > aServices { SERVICE_FIXEDLINE };
+
+    return aServices;
+}
+
+uno::Reference< uno::XInterface > OFixedLine::create(uno::Reference< uno::XComponentContext > const & xContext)
+{
+    return *(new OFixedLine(xContext));
+}
+
+
 uno::Sequence< OUString > SAL_CALL OFixedLine::getSupportedServiceNames(  )
 {
-    return { SERVICE_FIXEDLINE };
+    return getSupportedServiceNames_Static();
 }
 
 sal_Bool SAL_CALL OFixedLine::supportsService(const OUString& ServiceName)
@@ -542,12 +561,5 @@ void SAL_CALL OFixedLine::setPrintRepeatedValues( sal_Bool /*_printrepeatedvalue
 
 } // namespace reportdesign
 
-
-extern "C" SAL_DLLPUBLIC_EXPORT css::uno::XInterface*
-reportdesign_OFixedLine_get_implementation(
-    css::uno::XComponentContext* context, css::uno::Sequence<css::uno::Any> const&)
-{
-    return cppu::acquire(new reportdesign::OFixedLine(context));
-}
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
